tests/parser/parse-type.4.bad.error
error: Malformed type predicate
  --> test:4:12
   |
 4 |  (declare f (T => T -> T))
   |              ^ expected predicate
